--- a/frontend/index.html
+++ b/frontend/index.html
@@ -64,10 +64,24 @@
     const visitContain = document.getElementById("visits")
     let visits = []
 
-    fetch("http://172.19.25.27:8000/api/v1/return_reception", {
-        // fetch("http://127.0.0.1:8000/api/v1/return_reception", {
+    let id = ""
 
-        method: "GET"})
+    fetch("http://172.19.25.27:8000/api/v1/return_person", {
+        method: "POST",
+        headers: { "Accept": "application/json" },
+        body: {full_name: "Иванов Иван"}
+      })
+      .then(res => res.json())
+      .then(data => {id = data.data[0]; console.log(id); return 0})
+      .catch(err => console.log(err.code + err.status))
+
+
+
+    fetch("http://172.19.25.27:8000/api/v1/return_reception", {
+        method: "POST",
+        headers: { "Accept": "application/json" },
+        body: ""
+      })
         .then(res => res.json())
         .then(data => {visits = data; console.log(visits); return 0})
         .catch(err => console.log(err.code + err.status))
