--- a/frontend/index.html
+++ b/frontend/index.html
@@ -88,7 +88,7 @@
     
     fetch("http://172.19.25.27:8000/api/v1/return_person", {
     method: "POST",
-    headers: { "Accept": "application/json" },
+    headers: { 'Content-Type': 'application/json;charset=utf-8'},
     body: JSON.stringify({full_name: "Иванов Иван"})
 })
     .then(res => res.json())
@@ -98,7 +98,7 @@
         
         return fetch("http://172.19.25.27:8000/api/v1/return_reception", {
             method: "POST",
-            headers: JSON.stringify({ "Accept": "application/json" }),
+            headers: JSON.stringify({ 'Content-Type': 'application/json;charset=utf-8' }),
             body: {id: id}
         });
     })
