--- a/frontend/index.html
+++ b/frontend/index.html
@@ -86,7 +86,7 @@
     //     .then(data => {visits = data; console.log(visits); return 0})
     //     .catch(err => console.log(err.code + err.status))
     
-    fetch("http://172.19.25.27:8000/api/v1/return_person", {
+    fetch("http://127.0.0.1:8000/api/v1/return_person", {
     method: "POST",
     headers: { 'Content-Type': 'application/json;charset=utf-8'},
     body: JSON.stringify({full_name: "Иванов Иван"})
@@ -96,10 +96,10 @@
         id = data.data[0];
         console.log(id);
         
-        return fetch("http://172.19.25.27:8000/api/v1/return_reception", {
+        return fetch("http://127.0.0.1:8000/api/v1/return_reception", {
             method: "POST",
-            headers: JSON.stringify({ 'Content-Type': 'application/json;charset=utf-8' }),
-            body: {id: id}
+            headers: { 'Content-Type': 'application/json;charset=utf-8'},
+            body: JSON.stringify({"id": id})
         });
     })
     .then(res => res.json())
