--- a/frontend/index.html
+++ b/frontend/index.html
@@ -445,9 +445,9 @@ fetch(`${url}/api/v1/return_all_users`, {
     const ctx2 = document.getElementById('chart-2');
     const ctx3 = document.getElementById('chart-3');
 
-    let di1 = visits.map(item => [item[5], item[23])
-    let di2 = visits.map(item => [item[5], item[24])
-    let di3 = visits.map(item => [item[5], item.[25]) 
+    let di1 = visits.map(item => item[5], item[23])
+    let di2 = visits.map(item => item[5], item[24])
+    let di3 = visits.map(item => item[5], item[25]) 
   
     new Chart(ctx, {
     type: 'line',
